clang/test/Driver/empty_arg.c
// RUN: not %clang -- "" 2>&1 | FileCheck %s
// CHECK: error: no such file or directory: ''
